--- a/lista.css
+++ b/lista.css
@@ -1,60 +1,128 @@
-.mosaico-item {
-    border: 2px solid darkgrey; /* Borde de 2 píxeles de ancho y color gris oscuro */
-    padding: 10px; /* Espacio interno alrededor de cada celda */
-    border-radius: 10px; /* Bordes redondeados de 10 píxeles */
-    column-count: 2; /* Divide el contenido en 2 columnas */
-    column-gap: 20px; /* Espacio entre las columnas */
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+.datos_user{
+    display: flex; /* Hace que los elementos se coloquen en fila */
+    align-items: center; /* Centra verticalmente los elementos */
 }
-
-/* Estilo para las imágenes dentro de las celdas */
-.mosaico-item img {
-    border: 1px solid #ccc; /* Un borde ligero para cada imagen */
-    border-radius: 5px; /* Bordes redondeados de 5 píxeles para las imágenes */
+.imagen{
+    max-width: 200px; /* Ajusta el tamaño de la imagen según tus necesidades */
+    margin-right: 20px; /* Espacio entre la imagen y el texto */
+}
+.encabezado{
+    display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 500px;
+}
+.circulos{
+    width: 30%;
+    height: 10%;
+    position: absolute;
+    top: 4%;
+    left: 50%;
+    transform: translateX(-50%); /* Centra horizontalmente */
+    padding: 10px;
+    display: flex;
+}
+.elementos_externos{
+    position: absolute;
+    top: 8%;
+    right: 6%;
+    transform: translateY(-50%);
+    padding: 10px;
+    
+}
+.elemento_mosaico_datos_unicos{
+    font-size: 18px;
 }
 .mosaico {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Cuatro columnas de igual ancho */
-    grid-gap: 10px; /* Espacio entre las imágenes */
+    grid-template-columns: repeat(3, 33%); /* Definir el número de columnas y su tamaño */
+    gap: 10px; /* Espacio entre elementos */
+    padding-top: 1%;
+    font-family: 'Open Sans', sans-serif;}
+
+.elemento_mosaico {
+    padding: 20px;
+    font-size: 24px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid grey;
+}
+.elemento_mosaico_desempeño {
+    font-size: 24px;
+}
+.elemento_mosaico_datos{
+    padding: 20px;
+    border-radius: 5px;
+    height: 25%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    column-count: 3; /* Divide el contenido en 3 columnas */
+    text-align: center;
+    border: 1px solid grey;
+}
+.grafica {
+    width: 91%; /* Ancho de la gráfica */
+    height: 40%;
+    margin: 0 auto; /* Centrar la gráfica horizontalmente */
+    padding: 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid grey;
+
+}
+.grafica_horario {
+    width: 91%; /* Ancho de la gráfica */
+    height: 27%;
+    margin: 0 auto; /* Centrar la gráfica horizontalmente */
+    padding: 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid grey;
+
+}
+.grafica_marcas {
+    width: 91%; /* Ancho de la gráfica */
+    height: 30%;
+    margin: 0 auto; /* Centrar la gráfica horizontalmente */
+    padding: 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid grey;
+}
+.grafica_edad {
+    width: 93%; /* Ancho de la gráfica */
+    height: 45%;
+    margin: 0 auto; /* Centrar la gráfica horizontalmente */
+    padding: 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid grey;
+
+}
+.grafica_genero_pais {
+    height: 46%;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid grey;
+    text-align: center;
+
+}
+.barra {
+    margin-bottom: 10px; /* Espacio entre las barras */
+    position: relative; /* Para poder agregar etiquetas de datos */
 }
 
-.fila {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+.etiqueta {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%); /* Centrar verticalmente la etiqueta */
+    left: 10px; /* Espacio a la izquierda de la etiqueta */
+    color: black; /* Color del texto */
 }
-.columna {
-    flex: 1;
+.img_marcas{
+    width: 80px;
 }
-.separador {
-    break-before: column; /* Forzar la separación antes de este elemento */
-    height: 2px; /* Altura del separador */
-    width: 100%; /* Ancho del separador */
-    margin-bottom: 20px; /* Espacio después del separador */
-}
-.imagen-color:hover {
-    background-color: orange; 
-}
-.datos{
-    padding-bottom: 40px;
-    font-size: 18px;
-    font-family: "Arial", sans-serif;
-    padding-left: 15px;
-}
-.numeros{
-    font-size: 20px;
-    font-family: "Arial", sans-serif;
-    padding-left: 60px;
-}
-.nombre{
-    font-size: 40px;
-    font-family: "Arial", sans-serif;
-    padding-left: 15px;
-}
-.datos-numeros{
-    padding-bottom: 40px;
-    font-size: 18px;
-    font-family: "Arial", sans-serif;
-    padding-left: 15px;
-}
-
