--- a/lista.css
+++ b/lista.css
@@ -53,7 +53,8 @@
 .elemento_mosaico_datos{
     padding: 20px;
     border-radius: 5px;
-    height: 25%;
+    height: 15%;
+    width: 93%;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     column-count: 3; /* Divide el contenido en 3 columnas */
     text-align: center;
@@ -100,15 +101,6 @@
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     border: 1px solid grey;
-
-}
-.grafica_genero_pais {
-    height: 46%;
-    font-size: 16px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-    border: 1px solid grey;
-    text-align: center;
 
 }
 .barra {
